--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express": "^4.17.1",
     "faker": "^5.5.3",
     "jsonwebtoken": "^8.5.1",
+    "libgen": "^2.1.2",
     "mongoose": "^6.0.2",
     "multer": "^1.4.3",
     "nodemon": "^2.0.15",
