--- a/.env copy
+++ b/.env copy
@@ -4,4 +4,4 @@ WS_PORT=3000
 SOCKET_PORT=5002
 APPS_SUBDOMAIN=http://localhost:5000/apps/
 JWT_SECRET=enotesSikretongMalupit
-ENV=DEVELOPMENT
+ENV=DEVELOPMENT1
